09 request verification use case + adapters